--- a/template.tex
+++ b/template.tex
@@ -112,9 +112,12 @@ grestore
 
 Purpose: We present a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
 Our method accurately localizes the trajectory of a flexible needle to which a spherical marker is attached at a known distance from the tip with respect to a baseline scan of patient in the CT scanner coordinate frame. 
+
 Methods: The localization is achieved with a significantly lower dose compared to a full scan using sparse view angle sampling and without reconstructing the CT image of the repeat scan.
 Our method starts by performing rigid registration between the patient and the baseline scan in 3D Radon space computed from the sparse projection data. It then computes 2D projection difference images in which the flexible needle and the spherical marker appear as prominent features. Their 3D spatial locations are then automatically extracted from the projection images to accurately trace the flexible needle trajectory. To validate our method, we conducted registration and needle trajectory localization experiments in seven abdomen phantom scans using a short and a long flexible needle. 
+
 Results: Our experimental results yield a mean needle trajectory localization error of 0.7 $\pm$ 0.2mm and a mean tip localization error of 2.4 $\pm$ 0.9 mm with a $\times$7.5 radiation dose reduction with respect to a full CT scan. 
+
 Conclusions: The significant radiation dose reduction enables more frequent needle trajectory localization during the needle insertion for a similar total dose, or a reduced total dose for the same localization frequency.
 \keywords{
 interventional CT \and 
@@ -147,17 +150,17 @@ We have recently introduced a new approach to CT radiation dose reduction in sit
 
 \section*{Previous work}
 Various methods have been recently developed to achieve accurate needle insertion with robotic actuators. The proposed methods focus on the mechanical modelling of the robotic system, the patient anatomy, and the needle trajectory planning, with less attention to needle localization from imaging modalities.
-Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of bevel-tip needle steering methods using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle/tissue interaction to execute a control sequence to follow a pre-planned needle trajectory. Image-based feedback is used as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
-Ben-David et al. \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism consists of a driver unit that advances the needle and a positioning unit that steers the needle during the insertion. A pre-planned 3D needle trajectory is executed and corrected during the insertion based on full-dose repeat CT scans.
-Earlier work by Glozman et al. \cite{glozman2007image} describes robotic flexible needle steering and a needle-tissue mechanical interaction model. The steering feedback is based on 2D in-plane imaging of the needle.
+Wu, Li, Lehocky, and Riviere \cite{wu2013automatic} and Engh, Minhas, Kondziolla and Riviere \cite{engh2010percutaneous} describe implementations of bevel-tip needle steering methods using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle/tissue interaction to execute a control sequence to follow a pre-planned needle trajectory. Image-based feedback is used as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
+Ben-David, Shochat, Roth, Nissenbaum, Sosna and Goldberg \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism consists of a driver unit that advances the needle and a positioning unit that steers the needle during the insertion. A pre-planned 3D needle trajectory is executed and corrected during the insertion based on full-dose repeat CT scans.
+Earlier work by Glozman and Shoham \cite{glozman2007image} describes robotic flexible needle steering and a needle-tissue mechanical interaction model. The steering feedback is based on 2D in-plane imaging of the needle.
 
-Most works in needle localization and tracking based on medical images use ultrasound as the imaging modality for localization. Vrooijink et al. \cite{vrooijink2013real} describe a robotics system that positions a 2D ultrasound transducer perpendicular to the needle tip. In this system, needle-induced image artifacts are used to localize the needle tip in the imaged plane. The ultrasound transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining ultrasound and X-ray imaging is presented in \cite{marinetto2017integration}. In this approach, a free-hand ultrasound probe and a fluoroscopic C-arm are registered using an external optical tracker to produce a fused image in which the needle can be localized and tracked.
+Most works in needle localization and tracking based on medical images use ultrasound as the imaging modality for localization. Vrooijink, Abayazid and Misra \cite{vrooijink2013real} describe a robotics system that positions a 2D ultrasound transducer perpendicular to the needle tip. In this system, needle-induced image artifacts are used to localize the needle tip in the imaged plane. The ultrasound transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining ultrasound and X-ray imaging is presented in \cite{marinetto2017integration}. In this approach, a free-hand ultrasound probe and a fluoroscopic C-arm are registered using an external optical tracker to produce a fused image in which the needle can be localized and tracked.
 
 Several works describe specific methods to localize the needle trajectory in reconstructed CT images. The authors of this paper have developed in previous work a method to localize the tip of a straight rigid needle \cite{medan2017reduced} as discussed above. The needle tip  is computed from 2D projection images in sinogram space. 
-Hou et al. \cite{huo2015shape} reconstruct the bevel-tip flexible needle trajectory from full CT slices by localizing 3D points at which the needle intersects slice planes and fitting a fourth-order polynomial to the resulting points set.
-Yaniv et al. \cite{yaniv2010needle} describe a system in which embedded electromagnetic fiducials are used for needle tracking under CT guidance. In-situ manual identification by the operator of the needle tip in a full-dose CT scan is required. Note that these methods rely on the acquisition of a full repeat CT scan and on the reconstruction of the image for each localization of the needle, with the ensuing radiation dose cost to the patient and the staff.
+Hou, Zhao, Han and Xu \cite{huo2015shape} reconstruct the bevel-tip flexible needle trajectory from full CT slices by localizing 3D points at which the needle intersects slice planes and fitting a fourth-order polynomial to the resulting points set.
+Yaniv, Cheng, Wilson, Popa, Lindisch, Campos-Nanez, Abeledo, Watson, Cleary, and Banovac \cite{yaniv2010needle} describe a system in which embedded electromagnetic fiducials are used for needle tracking under CT guidance. In-situ manual identification by the operator of the needle tip in a full-dose CT scan is required. Note that these methods rely on the acquisition of a full repeat CT scan and on the reconstruction of the image for each localization of the needle, with the ensuing radiation dose cost to the patient and the staff.
 
-In a different clinical application, Cong et al.  \cite{cong2015quantitative} show that the 3D structure of coronary arteries can be reconstructed from a few X-ray angiography views using forward projection of an evolving parametric 3D model into 2D projections and updating the model based on the projection images. This method may be applicable to track the location of a needle and patient anatomy, although to the best our knowledge, it has not yet been used for needle tracking. 
+In a different clinical application, Cong, Yang, Ai, Chen, Liu and Wang \cite{cong2015quantitative} show that the 3D structure of coronary arteries can be reconstructed from a few X-ray angiography views using forward projection of an evolving parametric 3D model into 2D projections and updating the model based on the projection images. This method may be applicable to track the location of a needle and patient anatomy, although to the best our knowledge, it has not yet been used for needle tracking. 
 
 \section*{Method}
 
