--- a/template.tex
+++ b/template.tex
@@ -80,7 +80,11 @@ grestore
 %\thanks{Grants or other notes
 %about the article that should go on the front page should be
 %placed here. General acknowledgments should be placed at the end of the article.}
-\thanks{Research supported by Kamin grant 57706, Office of the Chief Scientist, Ministry of Trade and Industry, Israel. We thank Eyal Lin and Ronen Shter of GE Healthcare Israel for the CT scans and for their valuable assistance.}% <-this % stops a space
+\thanks{Research supported by Kamin grant 57706, Office of the Chief Scientist, Ministry of Trade and Industry, Israel.\\
+We thank Eyal Lin and Ronen Shter of GE Healthcare Israel for the CT scans and for their valuable assistance.\\
+The authors declare that they have no conflict of interest.\\
+This article does not contain any studies with human participants or animals performed by any of the authors.\\
+This article does not contain patient data.}% <-this % stops a space
 % \thanks{G. Medan and L. Joskowicz are with the CASMIP Laboratory, School of Computer Science and Engineering, The Hebrew University of Jerusalem, Israel (josko@cs.huji.ac.il).}%
 }
 % \subtitle{Do you have a subtitle?\\ If so, write it here}
@@ -107,7 +111,7 @@ grestore
 \date{}
 
 \maketitle
-
+\vspace{-1cm}
 \begin{abstract}
 
 Purpose: We present a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
