final changes before submission

--- a/template.tex
+++ b/template.tex
@@ -142,15 +142,15 @@ CT guidance is often used in interventional radiology procedures to help the sur
 %Dose reduction for physician
 Dose reduction in interventional CT is important both for patients and for the medical staff, since the time spent by physicians, nurses and technologists throughout their careers in the intervention suite necessarily involves exposure to ionizing radiation. While protection equipment is used by medical professionals, the cumulative exposure has been linked to an increased risk of cataracts and cancer \cite{miller2010occupational, sarti2012low}. In interventional CT, it is important to develop methods to prevent excessive dose exposure to the radiologist's hands \cite{stoeckelhuber2005radiation}.
 
-Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT \textcolor{red}{with or without optical or electromagnetic tracking.}
-Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice. \textcolor{red}{Moreover, it requires direct contact between the US probe and the patient body, and cannot be used when imaging needle near or inside the lungs due to air.}
+Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT with or without optical or electromagnetic tracking.
+Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice. Moreover, it requires direct contact between the US probe and the patient body, and cannot be used when imaging needle near or inside the lungs due to air.
 X-ray fluoroscopy offers improved spatial and intensity resolution, but is not suitable for procedures that require axial views or when complex anatomical relationships must be characterized in 3D during the intervention.
 Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with $\times$2-3 radiation dose reduction \cite{dynact}.
-\textcolor{red}{Interventional CT procedures are very common, as they offer ease of use, superior image quality, axial slices views, and 3D imaging \cite{gupta2014ct}.}
+Interventional CT procedures are very common, as they offer ease of use, superior image quality, axial slices views, and 3D imaging \cite{gupta2014ct}.
 
 Dose reduction techniques for CT aim to achieve good image quality for a single, standalone scan acquisition. The most common radiation dose reduction technique is tube current modulation, in which the scan is acquired with a lower tube current. However, this technique decreases the scanning signal to noise ratio, which results in noise, lowered imaging contrast and resolution, and introduces imaging artifacts. Several methods have been developed to address these problems, including image denoising \cite{manduca2009projection} and image reconstruction with statistical noise models  \cite{zhang2016statistical,kim2015sparseview,niu2014sparse,liu2014total}. The radiation dose is typically x2-3 that of a full CT scan. 
 
-We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan \text{red}{volumetric} image. This technique yields a x9-20 radiation dose reduction. However, it is of limited use, as it only tracks the needle tip and assumes that the needle is rigid and does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. \textcolor{red}{The main novelty of this work as compared to our previous one \cite{medan2017reduced} is the extension of the method to allow localization of a flexible needle, which is a common during interventional chest and abdominal interventional CT procedures. The advantages of our CT-based solutions over the existing procedure and over other modalities are: 1) no need of external tracking with its associated equipment and markers; 2) minimal modification of the current interventional CT workflow; 3) a simple and inexpensive sphere added to the needle; 4) no need for in-plane needle imaging.}
+We have recently introduced a new approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current of the X-ray source during its rotation. By exploiting the projection space raw data, registration with the baseline scan and accurate localization of the needle tip in the repeat scans is achieved without reconstruction of the repeat scan volumetric image. This technique yields a x9-20 radiation dose reduction. However, it is of limited use, as it only tracks the needle tip and assumes that the needle is rigid and does not take into account the needle bending during the insertion, which frequently occurs in common interventional procedures, e.g., lungs and liver biopsies with thin flexible needles. The main novelty of this work as compared to our previous one \cite{medan2017reduced} is the extension of the method to allow localization of a flexible needle, which is commonly used in chest and abdominal interventional CT procedures. The advantages of our CT-based solutions over the existing procedure and over other modalities are: 1) no need of external tracking with its associated equipment and markers; 2) minimal modification of the current interventional CT workflow; 3) a simple and inexpensive sphere added to the needle; 4) no need for in-plane needle imaging.
 
 \section*{Previous work}
 Various methods have been recently developed to achieve accurate needle insertion with robotic actuators. The proposed methods focus on the mechanical modelling of the robotic system, the patient anatomy, and the needle trajectory planning, with less attention to needle localization from imaging modalities.
@@ -170,8 +170,8 @@ In a different clinical application, Cong, Yang, Ai, Chen, Liu and Wang \cite{co
 
 We describe next a new method for flexible needle and patient localization in interventional CT procedures with fractional CT scanning. Our method starts by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between the baseline CT scan without the needle, and a repeat scan with the needle while it is inserted. The repeat scan is performed by sparsely sampling the view angle domain (fractional scanning) and without reconstructing the CT image. The baseline scan is a full scan, sampled densely in the view angle domain. We use projection difference images computed by subtracting registered re-projected baseline scan images from the sparse set of repeat projection images. These images highlight the differences between the scans, e.g., the needle. The flexible needle trajectory is then traced in 3D space using the projection difference images. The main steps of our method are:
 \begin{enumerate}
-\item \textit{Fractional scanning}.  \textcolor{red}{A fractional repeat scan is acquired with the needle in place, meaning that only a sparse set of view angles is acquired with the needle present during the repeat scan.} The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
-\item \textit{Projection difference}. \textcolor{red}{Projection difference images are computed as follows. First, the rigid transformation obtained in the previous step is applied to the baseline scan volume image, and the forward projections of the aligned baseline volume are computed for the view angles corresponding to the sparse set of repeat scan view angles. Then, projection difference images are obtained by subtracting the above-mentioned baseline projections from the corresponding repeat scan projections to obtain projection difference images. Since the presence of the needle is assumed to be the only physical difference between the two scans, it should appear as high-intensity pixels that yield a curve in the projection difference images. These images are then post-processed by computing the gradient intensity image, and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude. (see Fig. \ref{proj_diff_fig}).} \\[0.05ex]
+\item \textit{Fractional scanning}. A fractional repeat scan is acquired with the needle in place, meaning that only a sparse set of view angles is acquired with the needle present during the repeat scan. The full baseline scan and fractional repeat scan are registered using our 3D Radon space rigid registration method \cite{medan2017sparse}. \\[0.05ex]
+\item \textit{Projection difference}. Projection difference images are computed as follows. First, the rigid transformation obtained in the previous step is applied to the baseline scan volume image, and the forward projections of the aligned baseline volume are computed for the view angles corresponding to the sparse set of repeat scan view angles. Then, projection difference images are obtained by subtracting the above-mentioned baseline projections from the corresponding repeat scan projections to obtain projection difference images. Since the presence of the needle is assumed to be the only physical difference between the two scans, it should appear as high-intensity pixels that yield a curve in the projection difference images. These images are then post-processed by computing the gradient intensity image, and normalizing by the local mean gradient intensity value to obtain an image in which the features of the projection difference have intensities on the same order of magnitude. (see Fig. \ref{proj_diff_fig}). \\[0.05ex]
 \item \textit{Spherical marker localization}. The 3D localization of the spherical marker attached to the flexible needle at a known distance from the tip is computed using the resulting projection difference images.\\[0.1ex]
 \item \textit{Incremental flexible needle trajectory tracing}. The flexible needle trajectory is incrementally computed in 3D space using the projection difference images, starting from the center of the spherical marker obtained in the previous step. \\[0.05ex]
 \item \textit{Display/feedback}. The current location of the flexible needle with respect to the baseline scan 3D image is displayed and/or used as feedback for gradually driving the needle towards the target.
@@ -230,7 +230,7 @@ The trajectory of the needle in 3D space is estimated by incrementally computing
   \STATE Adjust the coordinates of landmark point $p_i$ such that $length(C_i) = L_{marker,tip}$ 
 \end{algorithmic}
 {\bf OUTPUT}: landmark points $p_i$ for $i=4,5,...$ \\[0.01ex]
-\hline
+
 \caption{Flexible needle 3D trajectory tracing algorithm. Constants $\Gamma$ and $L_{marker,tip}$ are the segment length and the distance between the spherical marker center and the needle tip, respectively.}
 \label{algo}
 \end{table}
@@ -289,7 +289,7 @@ First, a scan of the empty scanner bed was acquired so that its sinogram can be 
 \begin{figure}[t]
 \centering
 \includegraphics[width=\textwidth]{projection_diff_images.png}
-\caption{\textcolor{red}{Normalized gradient magnitude of} projection difference images for two views from one scan of the short flexible needle (left), and zoomed in on the needle in each image (right). The green crosses indicate the ground truth spherical marker center and the needle tip; the red dots indicate the landmark points computed by the incremental flexible needle trajectory algorithm.}
+\caption{Normalized gradient magnitude of} projection difference images for two views from one scan of the short flexible needle (left), and zoomed in on the needle in each image (right). The green crosses indicate the ground truth spherical marker center and the needle tip; the red dots indicate the landmark points computed by the incremental flexible needle trajectory algorithm.
 \label{proj_diff_fig}
 \end{figure}
 
@@ -297,7 +297,7 @@ The full baseline scan was registered to each sparse scan with the flexible need
 
 The spherical marker center ground truth coordinates was obtained by manual localization on the reconstructed images. The flexible needle trajectory ground truth was traced in 3D image space by manually placing landmark points on a volumetric difference image and then fitting them to a 3D cubic B\'ezier curve. The flexible needle tip ground truth location was defined as the point on the needle trace found at the known tip-marker distance. The flexible needle trajectory error was evaluated as the root-mean-squared distance of points along the fitted curve to the nearest point on the ground-truth B\'ezier curve.
 
-Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). \textcolor{red}{In our method, long needle segments that are in-plane lead to the inaccurate estimation of the trajectory since the projections of these segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane. This means that there is no unique solution to the inverse problem of the path reconstruction from projections in this degenerate case \cite{medan2017reduced}.} Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
+Table \ref{results_table} summarizes the results of the flexible needle tip localization for seven CT scans: four with the long needle (L1-4) and three with the short needle (S1-3). One of the scans (L3) yields a large tip localization error due to the needle trajectory being very close to in-plane with the axial plane (Fig. \ref{multislices_fig}). In our method, long needle segments that are in-plane lead to the inaccurate estimation of the trajectory since the projections of these segments appear as horizontal lines in the projection difference images regardless of the orientation within the plane. This means that there is no unique solution to the inverse problem of the path reconstruction from projections in this degenerate case \cite{medan2017reduced}. Thus, in-plane needle insertion should be avoided to enable the recovery of the needle orientation as an intersection of non-parallel planes.
 
 The running time of our implementation is 200-250 seconds on an Intel i7 CPU running un-optimized Matlab code. To allow our method to be used in a clinical setting, the code should be optimized and parallelized for GPU computations so as to reduce the running time to 2-5 seconds. The parallelization is achieved in the projection difference computation step by computing the projection difference images in parallel and in the subsequent landmark point additions.  
 
@@ -312,17 +312,17 @@ The running time of our implementation is 200-250 seconds on an Intel i7 CPU run
 
 The key novelty of our method is the simultaneous tracking of a flexible needle and the registration of the patient location with respect to a baseline scan by fractional scanning, which obviates the need for the reconstruction of the scanned image. The computed flexible needle location can be displayed with respect to the baseline CT scan images in 2D or 3D to provide visual feedback to the clinician. The resulting augmented images are free from imaging artifacts and allow an unobstructed view of the target tissue and its surroundings. The accurate flexible needle location is of particular use for robotically driven needles to determine and adjust the needle insertion trajectory with substantially less radiation dose. 
 
-\textcolor{red}{Fractional scanning is an alternative and complementary radiation dose reduction technique to low-dose scanning. The fractional scanning technique uses only a small number of scan angles, e.g., 12-24. By using fewer scan angles, a lower radiation dose is imposed on the patient. The dose reduction is calculated as the percentage of scan angles acquired out of the full 180 angles.}
+Fractional scanning is an alternative and complementary radiation dose reduction technique to low-dose scanning. The fractional scanning technique uses only a small number of scan angles, e.g., 12-24. By using fewer scan angles, a lower radiation dose is imposed on the patient. The dose reduction is calculated as the percentage of scan angles acquired out of the full 180 angles.
 
-\textcolor{red}{Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching the spherical marker to the flexible needle by the medical staff before the intervention and sterilizing it by autoclaving together with the other instruments required for the procedure.}
+Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching the spherical marker to the flexible needle by the medical staff before the intervention and sterilizing it by autoclaving together with the other instruments required for the procedure.
 
 {\em Method limitations}: our method is applicable to situations in which the patient anatomy baseline and repeat scans present minimal or no deformations and rigid registration can be used to align them. 
-\textcolor{red}{Anatomical deformations could potentially be addressed in future work by extending the registration stage into a deformable registration algorithm between the repeat and baseline scans, relying on a low-dimensional parameter space to describe a global deformation field.}
+Anatomical deformations could potentially be addressed in future work by extending the registration stage into a deformable registration algorithm between the repeat and baseline scans, relying on a low-dimensional parameter space to describe a global deformation field.
 The scan field of view should include both the flexible needle and the spherical marker and should avoid in-plane needle insertion (an out-of-plane angle $>3^o$ suffices).
 
 {\em Study limitations:} the scope of our study is limited to several scans of an abdomen phantom. Fractional scanning is simulated from full scan data by omitting most of the repeat scan data used as input for the algorithm. To implement our method on a commercial CT scanner, fractional scanning can be achieved by fast modulation of the X-ray tube current and/or voltage, or by fast mechanical X-ray  collimation during scan acquisition. Fractional scanning can be realized by software (scanner controller), while collimation requires hardware development. Both are beyond the scope of this work.
  
-\textcolor{red}{Anatomical deformations in the on-line fractional CT scanning framework are addressed in ongoing work with our new fractional scanning 3D Radon space deformable registration method \cite{adelmanmsc2018}. The method computes a deformation field by minimizing a general low-order parametric model in Radon space.  To increase the convergence range and efficiency of the optimization, our method relies on a Radon space version of the well-known image processing hierarchical pyramid approach.}
+Anatomical deformations in the on-line fractional CT scanning framework are addressed in ongoing work with our new fractional scanning 3D Radon space deformable registration method \cite{adelmanmsc2018}. The method computes a deformation field by minimizing a general low-order parametric model in Radon space.  To increase the convergence range and efficiency of the optimization, our method relies on a Radon space version of the well-known image processing hierarchical pyramid approach.
  
 \section*{Conclusions}
 We have presented a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
